@@ -7,13 +7,12 @@ import livro.jogo.telas.desktop.personalizados.TelaSecoesBasica;
 import livro.jogo.utils.DadosLivroCarregado;
 import livro.jogo.utils.Util;
 
+import javax.swing.*;
 import java.awt.event.MouseEvent;
 import java.awt.event.MouseListener;
 
-public class TelaSecao_7 extends TelaSecoesBasica {
-
-
-    public TelaSecao_7(Secao secao) {
+public class TelaSecao_9 extends TelaSecoesBasica {
+    public TelaSecao_9(Secao secao) {
         super(secao, CarregarTelas.getReferenciaTelaPrincipal());
     }
 
@@ -26,23 +25,16 @@ public class TelaSecao_7 extends TelaSecoesBasica {
         botaoOpcao1.setBounds(120,740,40,50);
         botaoOpcao1.setToolTipText("Somente após vencer todos os inimigos você pode escolher esta opção.");
 
-        //Configurando botões
-        acaoBotoes(secao);
-
-        //Inclusao dos botões que representam os inimigos a serem atacados
+        //Botão de batalha
         configurandoBotoesBatalha(secao);
+
+        acaoBotoes(secao);
     }
 
     private void configurandoBotoesBatalha(Secao secao) {
 
-        JButtonAbrirBatalha.carregarBotoesBatalha(this, secao.getInimigos().get(0),
-                100,570,150,165);
-
-        JButtonAbrirBatalha.carregarBotoesBatalha(this, secao.getInimigos().get(1),
+        JButtonAbrirBatalha.carregarBotoesBatalha(this, secao.getInimigos().getFirst(),
                 365,570,150,165);
-
-         JButtonAbrirBatalha.carregarBotoesBatalha(this, secao.getInimigos().get(2),
-                630,570,150,165);
     }
 
     @Override
@@ -50,7 +42,6 @@ public class TelaSecao_7 extends TelaSecoesBasica {
         botaoOpcao1.addMouseListener(new MouseListener() {
             @Override
             public void mouseClicked(MouseEvent e) {
-
                 if (e.getSource() == botaoOpcao1){
                     if ( Util.isVenceuTodosInimigos(secao) )
                         abrirProximaSecao( secao.getProximasSecoes().getFirst().getCodProximaSecao() );
@@ -81,6 +72,4 @@ public class TelaSecao_7 extends TelaSecoesBasica {
             }
         });
     }
-
-
 }
